# rlarndg

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  dev.sources.json  docker-compose.yml  flake.nix  makefile  nginx.conf  readme.md  sources.json
.github/workflows/: docker.yml
.sqlx/: query-200924db03578359aac5542cadf7084062466eeeab3e8fe30fbb10505964b92b.json  query-206861ee5b7a01e82a99e4cbbd103b0c529b5b2f7cd85cf7f5ca66a8aae5533d.json  query-386708bd5bdc6ef49885231a12211b746b418a7449f9e82eee5b1d22a82ea170.json  query-43f81090117569386c22c31e371e067649a700b7115f9301044b05e2edfbbf1e.json  query-899697640c87f1da4a002deb87d1c525a3558f5f63fde3e4b669ebe873d8c3db.json  query-9204ff259c8042793e7fe6e8d6a9269e0be16bf2183b158a49de4f980f1e83f6.json  query-96aed1f860b362554d5e89f190436ace27ce354a36f733223a207db4d904f9ce.json  query-cb016d10181a7c20e96d9b5c469fe58c75b2f50ec3287908691a82597bab443e.json  query-fb26c5f7052b9bf9bf39f5cf6947b73839ddd95d6bda215b859d0105bcb694b6.json
frontend/: index.html  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/helpers/: router.ts  user.ts
migrations/: 1_users.up.sql  2_keys.down.sql  2_keys.up.sql
src/: main.rs
src/helpers/: database.rs  frame.rs  jwt.rs  mod.rs  random.rs  responses.rs  stripe.rs
src/helpers/authentication/: jwt.rs
src/helpers/database/: connection.rs
src/helpers/generator/: frame.rs  mod.rs
src/helpers/http/: get_res_val.rs  mod.rs  responses.rs
src/models/: key.rs  mod.rs  user.rs
src/routes/: auth.rs  keys.rs  mod.rs  values.rs
(+27 files in other folders)
