[package]
name = "rlarndg"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
time = { version = "0.3.36", features = ["serde"] }
dotenvs = "0.1.0"
rand = "0.8.5"
reqwest = "0.12.9"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.0"
tokio = { version = "1.41.0", features = ["full"] }
flexi_logger = "0.29.6"
log = "0.4.22"
colored = "2.1.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-async-std", "time"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
